--- a/eureka-service.yml
+++ b/eureka-service.yml
@@ -8,8 +8,10 @@ spring:
 server:
   port: 8761
 
-# configure eureka to single instance
+# config eureka in cluster
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
